Create master branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3>
 <a id="github-repositories" class="anchor" href="#github-repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Github Repositories</h3>
 
-<p>github.com/whitepg06</p>
+<p><a href="https://github.com/whitepg06"></a><a href="https://github.com/whitepg06">https://github.com/whitepg06</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/whitepg06/portfolio">Portfolio</a> is maintained by <a href="https://github.com/whitepg06">whitepg06</a>.</span>
